gcc/testsuite/rust/rustc/ui/parser/mismatched-braces/missing-close-brace-in-struct.rs
pub(crate) struct Bar<T> {
  foo: T,

trait T { // { dg-error "" "" { target *-*-* } }
    fn foo(&self);
}


impl T for Bar<usize> {
fn foo(&self) {}
}

fn main() {} // { dg-error "" "" { target *-*-* } }

